# Data-Analysis-Statistical-Modeling-and-Computation-in-Applications

./: .gitignore  Readme.md  pyproject.toml
Module 0 - Practice, Grading and Other/: Written Report Practice.docx
Module 1 - Review/: Lecture1.ipynb  Lecture2.ipynb  Lecture4.ipynb
Module 1 - Review/Project/: Project.ipynb
Module 2 - Genomics and High Dimensional Data/: Lecture 1.ipynb  Lecture 2.ipynb
Module 2 - Genomics and High Dimensional Data/Project/: Problem1.ipynb  Problem2.ipynb  Problem3.ipynb  Report.md
Module 2 - Genomics and High Dimensional Data/Recitation/: Recitation - Dendogram - R.r  Recitation - Python.ipynb
Module 3 - Network Analysis/: Lecture 1.ipynb  Lecture 2.ipynb  Lecture 3.ipynb  Lecture 4.ipynb
Module 3 - Network Analysis/Project/: Problem 1.ipynb  Problem 2.ipynb  Problem 3 or Project.ipynb  Written Report.md
Module 4 - Time Series/: Lecture 1.ipynb  Lecture 2.ipynb  Lecture 3.ipynb
Module 4 - Time Series/Project/: Problem 1.ipynb  Problem 3.ipynb  Written Report - Equations.md  Written Report.md
Module 4 - Time Series/Project/Datasets/: CO2.csv
Module 4 - Time Series/Project/Solutions/: solution_notebooks_timeseries_problem3_autograded.ipynb
Module 4 - Time Series/Recitation/: Climate Signal.ipynb  Stock Forecasting.ipynb
Module 5 - Environmental Data and Gaussian Processes/: Lecture 1.ipynb  Lecture 3.ipynb
Module 5 - Environmental Data and Gaussian Processes/Project/: Project - Part I.ipynb  Project - Part II.ipynb  Project.ipynb  Written Report.md  flow_simulation.py  gaussian_process.py
(+7 files in other folders)
